Resolved image cut off in restaurant profile page

--- a/client-server/src/app/pages/home/home.component.scss
+++ b/client-server/src/app/pages/home/home.component.scss
@@ -332,7 +332,7 @@
 .logo-img {
   width: 263px;
   height: 175px;
-  object-fit: cover;
+  object-fit: contain;
 
   /*@media screen and (max-width: 1160px) {
     width: 220px;
